--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <!-- Robert Grant 11/4/2018-->
 <html lang = "en">
 <head>
-	<link rel="stylesheet" href="styles/pokemonstyles.css">
+	<link rel="stylesheet" href="pokemonstyles.css">
 	<link rel="icon" href="favicon.ico">
 	<title> Questions</title>
 	<meta charset="utf-8">
@@ -11,7 +11,7 @@
 <body>
 	<div id = "outerwrapper">
 		<header>
-			<a href="index.html"><img src="images/pokemon.png" alt="Pokemon"></a>
+			<a href="index.html"><img src="pokemon.png" alt="Pokemon"></a>
 		<h1>Competitive Teams</h1>
 		</header>
 		<nav>
