--- a/moves.html
+++ b/moves.html
@@ -2,7 +2,7 @@
 <!-- Robert Grant 10/21/2018-->
 <html lang = "en">
 <head>
-<link rel="stylesheet" href="styles/pokemonstyles.css">
+<link rel="stylesheet" href="pokemonstyles.css">
 <link rel="icon" href="favicon.ico">
 <title>Moves</title>
 <meta charset="utf-8">
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-		<a href="index.html"><img src="images/pokemon.png" alt="Pokemon"></a>
+		<a href="index.html"><img src="pokemon.png" alt="Pokemon"></a>
 		<h1>Competitive Teams</h1>
 	</header>
 	<nav>
@@ -36,20 +36,20 @@
 			<h3>Physical Attacks</h3>
 			<p>These types of attacks scale of your Pokemon's attack stat and can be lessened in damage by the opponents Pokemon's defense stat 
 			when it comes to these types of moves you want to teach them to Pokemon that have a high basic attack stat. To tell if a move is a Physical attacks
-			This symbol will appear on the moves description page.<img  src="images/Physical.png" alt=null></p>
+			This symbol will appear on the moves description page.<img  src="Physical.png" alt=null></p>
 		</section>
 		<section>
 			<h3>Special Attacks</h3>
 			<p>With Special attacks these tend to scale off your Pokemon's special attack stat and the higher that stat for the Pokemon is the the more damage this type 
 			of move is capable of doing but the opponents Pokemon's special defense stat can lower the amount of damage this move can deal to them. The icon to differentiate this 
-			type of move from a physical attack or status effect is.<img  src="images/Special.png" alt=null></p> 
+			type of move from a physical attack or status effect is.<img  src="Special.png" alt=null></p> 
 		</section>
 		<section>
 			<h3>Status effect</h3>
 			<p>These moves do not scale off any stat that a Pokemon has they are used to weaken the opponents Pokemon or effect that negatively affect the Pokemon through out the battle
 			while they can also be used to boost your own Pokemon's stats or health these are as necessary to a team as the other two types of moves above. Like the two other
 			types of Pokemon above these moves do work best on a certain type of Pokemon those would be your tank wall type Pokemon because they are able to withstand attacks to 
-			gets these types of moves off to help your other Pokemon that maybe cant survive attacks like your tank can.The icon for this type of move is.<img  src="images/Status.png" alt="Status effect icon"></p> 
+			gets these types of moves off to help your other Pokemon that maybe cant survive attacks like your tank can.The icon for this type of move is.<img  src="Status.png" alt="Status effect icon"></p> 
 		</section>
 		<section>
 			<h3>Choosing Moves</h3>
