--- a/thankyou.html
+++ b/thankyou.html
@@ -2,7 +2,7 @@
 <!-- Robert Grant 10/21/2018-->
 <html lang = "en">
 <head>
-<link rel="stylesheet" href="styles/pokemonstyles.css">
+<link rel="stylesheet" href="/pokemonstyles.css">
 <link rel="icon" href="favicon.ico">
 <title>Thank You</title>
 <meta charset="utf-8">
