--- a/type-strength.html
+++ b/type-strength.html
@@ -2,7 +2,7 @@
 <!-- Robert Grant 10/21/2018-->
 <html lang = "en">
 <head>
-<link rel="stylesheet" href="styles/pokemonstyles.css">
+<link rel="stylesheet" href="pokemonstyles.css">
 <link rel="icon" href="favicon.ico">
 <title>Type Strength</title>
 <meta charset="utf-8">
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-		<a href="index.html"><img src="images/pokemon.png" alt="Pokemon"></a>
+		<a href="index.html"><img src="pokemon.png" alt="Pokemon"></a>
 		<h1>Competitive Teams</h1>
 	</header>
 		<nav>
@@ -302,7 +302,7 @@
 					</ul>
 				</section>
 			</div>
-			<img src="images/types.jpg" alt="none" width="290" id= "types">
+			<img src="types.jpg" alt="none" width="290" id= "types">
 			<section id ="use">
 				<h3>How to Use this</h3>
 				<p>When constructing a team do your best to never repeat types so that your team has a wide scale of typing coverage cause if your team is primarily fire then
